--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="Ji37pjDUAo0ZLKM/KBsFgA==,dj2d4NDxgn1gh39olcRNlQ==,7BfUaiiaZ8Qy1OHD1F9ZPg==,bdaIIwVeTMeWn4nQy4HwDA=="
-API_TOKEN_SALT=NlMwj0HCqnqXF7c2T9EPxA==
-ADMIN_JWT_SECRET=krami+0+Ipp8XyxepmpC3A==
-TRANSFER_TOKEN_SALT=yJX0LFhT8PHCDAnysmGNhg==
-JWT_SECRET=8O799yaH7ZwnWvEqtPlF+w==
+APP_KEYS="toBeModified1,toBeModified2"
+API_TOKEN_SALT=tobemodified
+ADMIN_JWT_SECRET=tobemodified
+TRANSFER_TOKEN_SALT=tobemodified
+JWT_SECRET=tobemodified
 
+## SQLite
 DATABASE_CLIENT=sqlite
-DATABASE_FILENAME=.tmp/data.db
+DATABASE_FILENAME=tobemodified
+DATABASE_SSL=false
+
+## Postgres
+DATABASE_CLIENT=postgres
+DATABASE_HOST=dpg-cugrjb3tq21c73f303g0-a
+DATABASE_PORT=5432
+DATABASE_NAME=kanjana
+DATABASE_USERNAME=kanjana
+DATABASE_PASSWORD=ByKx2j5zmhhdTTHs4o59iaei0EPAOiHF
 DATABASE_SSL=false
