--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ DATABASE_SSL=false
 
 ## Postgres
 DATABASE_CLIENT=postgres
-DATABASE_HOST=dpg-cugrjb3tq21c73f303g0-a
+DATABASE_HOST=dpg-cugrjb3tq21c73f303g0-a.singapore-postgres.render.com
 DATABASE_PORT=5432
 DATABASE_NAME=kanjana
 DATABASE_USERNAME=kanjana
 DATABASE_PASSWORD=ByKx2j5zmhhdTTHs4o59iaei0EPAOiHF
-DATABASE_SSL=false
+DATABASE_SSL=true
